--- a/package.json
+++ b/package.json
@@ -7,12 +7,22 @@
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
-  "keywords": ["api", "product", "category", "file-upload", "express", "sequelize", "postgresql"],
+  "keywords": [
+    "api",
+    "product",
+    "category",
+    "file-upload",
+    "express",
+    "sequelize",
+    "postgresql"
+  ],
   "author": "Имя",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.4",
+    "nodemailer": "^6.9.16",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.29.3"
